Implementação completa dos testes unitários com alto coverage.