@@ -4,6 +4,7 @@ import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.crypto.bcrypt.BCrypt;
@@ -11,25 +12,23 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.fourcamp.sbanco.domain.dto.cliente.ClienteDTO;
+import com.fourcamp.sbanco.domain.dto.conta.AtualizarConta;
+import com.fourcamp.sbanco.domain.dto.conta.CadastroConta;
 import com.fourcamp.sbanco.domain.dto.conta.ContaDTO;
-import com.fourcamp.sbanco.domain.dto.conta.DadosAtualizarConta;
-import com.fourcamp.sbanco.domain.dto.conta.DadosCadastroConta;
-import com.fourcamp.sbanco.domain.dto.conta.DadosNumeroESenhaConta;
 import com.fourcamp.sbanco.domain.dto.conta.DepositoESaqueConta;
-import com.fourcamp.sbanco.domain.dto.conta.DetalhamentoDadosConta;
+import com.fourcamp.sbanco.domain.dto.conta.DetalhaConta;
+import com.fourcamp.sbanco.domain.dto.conta.NumeroESenhaConta;
 import com.fourcamp.sbanco.domain.dto.contacorrente.ContaCorrenteDTO;
 import com.fourcamp.sbanco.domain.dto.contapoupanca.ContaPoupancaDTO;
+import com.fourcamp.sbanco.domain.dto.pix.CadastroChavePix;
 import com.fourcamp.sbanco.domain.dto.pix.ChavePixDTO;
-import com.fourcamp.sbanco.domain.dto.pix.DadosCadastroChavePix;
 import com.fourcamp.sbanco.domain.dto.pix.DadosPix;
 import com.fourcamp.sbanco.domain.dto.pix.DetalhamentoChavesPix;
-import com.fourcamp.sbanco.domain.dto.role.AssociaRoles;
-import com.fourcamp.sbanco.domain.dto.role.Role;
 import com.fourcamp.sbanco.domain.dto.transacao.DetalhamentoTransacao;
 import com.fourcamp.sbanco.domain.dto.transacao.TransacaoDTO;
 import com.fourcamp.sbanco.domain.enums.EnumTransacao;
-import com.fourcamp.sbanco.domain.repository.AssociaRolesRepository;
 import com.fourcamp.sbanco.domain.repository.ContaRepository;
+import com.fourcamp.sbanco.infra.exceptions.ContaNaoExisteException;
 import com.fourcamp.sbanco.infra.exceptions.SenhaInvalidaException;
 import com.fourcamp.sbanco.infra.exceptions.TransacaoInvalidaException;
 
@@ -49,30 +48,22 @@ public class ContaService {
 	private ChavePixService chavePixService;
 	@Autowired
 	private ExtratoBancarioService extratoService;
-	@Autowired
-	private AssociaRolesRepository assoRepo;
 
-	public ContaPoupancaDTO cadastrarCP(@Valid DadosCadastroConta dados) {
+	public ContaPoupancaDTO cadastrarCP(@Valid CadastroConta dados) {
 		ClienteDTO cliente = clienteService.getByCpf(dados.cpfCliente());
-		ContaPoupancaDTO conta = contaRepository.save(new ContaPoupancaDTO(cliente, dados.senha()));
-		Role role = new Role("CP");
-		assoRepo.save(new AssociaRoles(conta, role));
-		conta.getRoles().add(role);
-		return conta;
+		return contaRepository.save(new ContaPoupancaDTO(cliente, dados.senha()));
 	}
-	public ContaCorrenteDTO cadastrarCC(@Valid DadosCadastroConta dados) {
+	public ContaCorrenteDTO cadastrarCC(@Valid CadastroConta dados) {
 		ClienteDTO cliente = clienteService.getByCpf(dados.cpfCliente());
-		ContaCorrenteDTO conta = contaRepository.save(new ContaCorrenteDTO(cliente, dados.senha()));
-		assoRepo.save(new AssociaRoles(conta, new Role("CC")));
-		return conta;
+		return contaRepository.save(new ContaCorrenteDTO(cliente, dados.senha()));
 	}
 
 	public ContaDTO getByNumeroDaConta(Long numeroDaConta) {
-		return contaRepository.findById(numeroDaConta).get();
+		return contaRepository.findById(numeroDaConta).orElseThrow(() -> new ContaNaoExisteException("Não existe uma conta com este número."));
 	}
 	
-	public DetalhamentoDadosConta consultaByNumeroDaConta(Long numeroDaConta) {
-		return new DetalhamentoDadosConta(contaRepository.findById(numeroDaConta).get());
+	public DetalhaConta consultaByNumeroDaConta(Long numeroDaConta) {
+		return new DetalhaConta(contaRepository.findById(numeroDaConta).orElseThrow(() -> new ContaNaoExisteException("Não existe uma conta com este número.")));
 	}
 	
 
@@ -86,9 +77,9 @@ public class ContaService {
 		execTaxasERendimentos(conta);
 		checaSenha(conta, dados.senha());
 		checaEntradaSaldo(bdDeposito);
-//		contaRepository.save(conta);
+		contaRepository.save(conta);
 		TransacaoDTO transacao = new TransacaoDTO(EnumTransacao.DEPOSITO, conta, bdDeposito);
-//		transacaoService.salvar(transacao);
+		transacaoService.salvar(transacao);
 		
 		conta.setSaldo(conta.getSaldo().add(transacao.getValor()));
 		extratoService.registraTransacao(conta.getExtrato(), transacao);
@@ -113,25 +104,25 @@ public class ContaService {
 		return new DetalhamentoTransacao(transacao);
 	}
 
-	public List<DetalhamentoTransacao> exibirExtrato(DadosNumeroESenhaConta dados) {
+	public List<DetalhamentoTransacao> exibirExtrato(NumeroESenhaConta dados) {
 		var conta = getByNumeroDaConta(dados.numeroDaConta());
 		execTaxasERendimentos(conta);
 		checaSenha(conta, dados.senha());
-		extratoService.exibe(conta.getExtrato());
-		
-		return conta.getExtrato().getHistoricoTransacoes().stream().map(DetalhamentoTransacao::new).toList();
+		List<DetalhamentoTransacao> list = conta.getExtrato().getHistoricoTransacoes().stream().map(DetalhamentoTransacao::new).collect(Collectors.toList());
+		list.add(new DetalhamentoTransacao(new TransacaoDTO(EnumTransacao.SALDO, conta, conta.getSaldo().setScale(2))));
+		return list;
 	}
-
-	public DetalhamentoDadosConta trocarSenha(DadosAtualizarConta dados) {
+	
+	public DetalhaConta trocarSenha(AtualizarConta dados) {
 		var conta = getByNumeroDaConta(dados.numeroDaConta());
 		execTaxasERendimentos(conta);
 		checaSenha(conta, dados.senhaAntiga());
 		conta.setSenha(dados.novaSenha());
 		
-		return new DetalhamentoDadosConta(conta);
+		return new DetalhaConta(conta);
 	}
 
-	public DetalhamentoChavesPix cadastrarChavePix(DadosCadastroChavePix dados) {
+	public DetalhamentoChavesPix cadastrarChavePix(CadastroChavePix dados) {
 		var conta = getByNumeroDaConta(dados.numeroDaConta());
 		execTaxasERendimentos(conta);
 		checaSenha(conta, dados.senha());
@@ -143,7 +134,7 @@ public class ContaService {
 
 	}
 
-	public List<DetalhamentoChavesPix> exibirChavesPix(DadosNumeroESenhaConta dados) {
+	public List<DetalhamentoChavesPix> exibirChavesPix(NumeroESenhaConta dados) {
 		var conta = getByNumeroDaConta(dados.numeroDaConta());
 		checaSenha(conta, dados.senha());
 		
@@ -165,6 +156,7 @@ public class ContaService {
 		
 		contaOrigem.setSaldo(contaOrigem.getSaldo().subtract(transacao.getValor()));
 		extratoService.registraTransacao(contaOrigem.getExtrato(), transacao);
+
 		receberTransacao(contaDestino, transacao);
 		
 		return new DetalhamentoTransacao(transacao); 
@@ -179,7 +171,6 @@ public class ContaService {
 		transacaoService.salvar(tr);
 		contaDestino.setSaldo(contaDestino.getSaldo().add(tr.getValor()));
 		extratoService.registraTransacao(contaDestino.getExtrato(), tr);
-
 	}
 
 	protected void checaSenha(ContaDTO conta, String senha) {
@@ -232,7 +223,6 @@ public class ContaService {
 			cc.setSaldo(cc.getSaldo().subtract(transacao.getValor()));
 			extratoService.registraTransacao(cc.getExtrato(), transacao);
 			cc.setUltimaCobranca(LocalDate.now());
-			System.err.println(taxa + "\n" + transacao + "\n" + cc.getSaldo());
 			contaRepository.save(cc);
 		}
 	}
